--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>My services page is now on feature 1 and changed by Nirmal</h1>
+<h1>My services page is now on feature 1 and changed by Nirmal and Bishnu</h1>
 
 
 </body>
